Finished first draft of the project. Logo issues are resolved. Does not include javascript to check if passwords match. Also not responsive for mobile/smaller device screens. May return later.

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .left-sidebar {
-    width: 50vw;
+    width: 40vw;
     height: 100vh;
     position: relative;
     overflow: hidden;
@@ -31,18 +31,41 @@ body {
     height: 100%;
     object-fit: cover;
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
 }
 
-.overlay {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    width: 25%;
-    height: auto;
-    transform: translateX(-50%);
+.image-text-pair {
+    position: relative;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    color: white;
+    gap: 1rem;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.image-text-pair img {
+  max-width: 20%;
+  height: 6em;
+}
+
+.image-text-pair p {
+  font-size: 1.25rem;
+  margin: 0;
+  font-family: norsebold;
+  font-size: 4em;
 }
 
 .right-sidebar {
+    width: 60vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
